# cognitive-hub

./: .dockerignore  .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml  mlops.yml
api/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
api/core/: AG_engine.py
api/routes/: AG.py  predict.py
api/schemas/: data_models.py
client/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
client/src/app/: layout.tsx  page.tsx
client/src/app/AG/: config.ts  page.tsx  types.ts  useAG.ts
client/src/app/AG/_components/: ConfigPanel.tsx  Dashboard.tsx
client/src/app/components/: navbar.tsx
client/src/app/mood/: page.tsx
client/src/app/mood/_components/: MoodPredictor.tsx
ml_research/: AG_neuroevolution.py  requirements.txt
ml_research/Aprendizaje-no-supervisado-reduccion-dimensiones/: .gitignore  README.md  clustering_jerarquico.ipynb  factorizacion_matriz_no_negativa_NMF.ipynb  pyproject.toml  transformacion_PCA.ipynb
ml_research/genetic_algorithms/: AG_feature_selection.py  AG_hyperparameter_optimization.py  AG_neuroevolution.py  README.md  pyproject.toml
ml_research/predictive_poc/: predict.py  pyproject.toml  train.py
ml_research/predictive_poc/model_artifacts/: metrics.json  mood_classifier.pkl
ml_research/swarm_algorithms/: ABC_feature_selection.py  PSO_NN_training_without_backpropagation.py  PSO_hyperparameter_tuning.py  PSO_weights_optimization.py  README.md  Swarm_clustering.py  main.py  pyproject.toml
model_artifacts/: metrics.json  metrics_summary.csv
