[project]
name = "swarm-algorithms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.3.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pygame>=2.6.1",
    "pyswarms>=1.3.0",
    "scikit-learn>=1.8.0",
]
